Configurando projetos Spring Boot com o application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.profiles.active=prod
+
+# docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
+# lista de propriedades do spring profile
