--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-spring.profiles.active=prod
+#spring.profiles.active=prod
+server.port = 8090
+
+notificador.email.host=smtp.com.br
+notificador.email.porta=28
 
 # docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # lista de propriedades do spring profile
