--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port = 8090
 
 notificador.email.host=smtp.com.br
-notificador.email.porta=28
+notificador.email.port=28
 
 # docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # lista de propriedades do spring profile
