Alterando a configuração do projeto dependendo do ambiente (com Spring Profiles)

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,9 @@
-spring.profiles.active=prod
+#spring.profiles.active=prod
 server.port = 8090
 
+notificador.email.host=smtp.com.br
+notificador.email.port=21
 
-notificador.email.port=35
 
 # docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # lista de propriedades do spring profile
