--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,8 @@
-spring.profiles.active=prod
+#spring.profiles.active=prod
 server.port = 8090
 
-
-notificador.email.port=35
+notificador.email.host=smtp.local
+notificador.email.port=28
 
 # docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 # lista de propriedades do spring profile
